--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -6,37 +6,10 @@
   cursor: pointer;
   color: #f9a825;
   background-color: #2f2f2f;
-  padding: 5px;
+  padding: 4vmin;
 }
 
-#emailme {
-  position: absolute;
-  right: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width:15vmin;
-  padding: 1vmin;
-  text-transform: uppercase;
-  font-size: 3vmin;
-  font-family: "LatoLatinWebMedium";
-  text-align: center;
-  pointer-events: all;
-  cursor: pointer;
-  color: #f9a825;
-  background-color: #2f2f2f;
-  text-decoration: none;
-}
-.svgWrapper {
-  width:10vmin;
-  height:10vmin;
-  border-radius: 999px;
-  background-color: #424242;
-  padding: 2vmin;
-  margin-bottom: 1vmin;
-  fill: #f9a825;
-}
+
 #timeline {
   position: absolute;
   transform-origin: 0 0;
@@ -70,10 +43,15 @@
   width: 3px;
   background-color: tomato;
   /* background-image: url('./images/Spinners.png'); */
-  height: 1000px;
+  height:300vh;
 
   -webkit-overflow-scrolling: touch;
   color: white;
   background: linear-gradient(to bottom, #333, #333 50%, #999 50%, #999);
   background-size: 100% 0px;
+}
+
+svg{
+  width: 100%;
+  height: 100%;
 }
