--- a/src/style.css
+++ b/src/style.css
@@ -211,14 +211,12 @@ font-family: 'LatoLatinWebHeavy';
   z-index: 1;
 }
 
-#geek{
+.geek{
   visibility:hidden;
   position: absolute;
   color:#424242;
-  font-size:160vmin;
-font-family: 'LatoLatinWebBlack';
-  letter-spacing: -2.5vmin;
-  text-transform: capitalize;
+  font-size:10vmin;
+  font-family: 'LatoLatinWebBlack';
 }
 
 #by{
@@ -286,10 +284,10 @@ font-family: 'LatoLatinWebHeavy';
   font-family: 'LatoLatinWeb';
   background-color: #f9a825;
   /* color: #f9a825; */
-  font-size:13vmin;
+  font-size:11vmin;
   font-weight: 100;
   font-family: 'LatoLatinWebLight';
-  line-height: 20vmin;
+  line-height: 19vmin;
   padding: 10vmin;
   max-width: 90vmin;
 }
