--- a/src/fonts/lato.css
+++ b/src/fonts/lato.css
@@ -26,13 +26,13 @@
 }
 
 /* Webfont: LatoLatin-Semibold */
-@font-face {
+/* @font-face {
   font-family: "LatoLatinWebSemibold";
   src: url("lato/LatoLatin-Semibold.woff") format("woff");
   font-style: normal;
   font-weight: normal;
   text-rendering: optimizeLegibility;
-}
+} */
 
 /* Webfont: LatoLatin-Medium */
 @font-face {
@@ -62,13 +62,13 @@
 }
 
 /* Webfont: LatoLatin-Thin */
-@font-face {
+/* @font-face {
   font-family: "LatoLatinWebThin";
   src: url("lato/LatoLatin-Thin.woff") format("woff");
   font-style: normal;
   font-weight: normal;
   text-rendering: optimizeLegibility;
-}
+} */
 /* Webfont: LatoLatin-Hairline */
 @font-face {
   font-family: "LatoLatinWebHairline";
